# flconverters

./: .gitignore  LICENSE  README.md  converters.py  library_test.py  requirements.txt  setup.cfg  setup.py
Output/: output.md
Output/img64/: Exx diamond_displacement.txt  Exx square_displacement.txt  battlepack_flare_progression-a569ccd0.txt  battlepack_flare_progression_text-0186674b.txt  circle_20_random.txt  l2-c3878036.txt
Output/img_binary/: .gitignore  3-a296c3d2.txt  CircleBoom-d69f3cbb.txt  Exx diamond.txt  Exx square.txt  bar_glow_right-82e75fd7.txt  circle-4134dc63.txt  circle-96840943.txt
Output/img_format/: .gitignore
Output/sheet_outputs/: .gitignore  Dataset.csv  Dataset.tsv
Output/txt_docx/: .gitignore  BF1-EA-Privacy_Policy-PC-fr-751c0122.docx
flconverters/: __init__.py  _helpers.py  flconverters.py
src/: __init__.py  converters.py
tests/: imgconv.py  sheeconv.py  txtconv.py  unit.py
tests/test_files/: .gitignore  BF1-EA-Privacy_Policy-PC-fr-751c0122.txt  Dataset.csv  Dataset.xlsx  IMG_0625 2021-07-14 15_34_58.heic  circle_20_random.tif
