[metadata]
name = converters
version = 0.0.1
author = Christos Synodinos
author_email = chris_sinodinos@outlook.com.com
description = Multiple file converters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CSynodinos/converters
project_urls =
Bug Tracker = https://github.com/CSynodinos/converters/issues
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent
[options]
package_dir =
= src
packages = find:
python_requires = >=3.6
install_requires =
    opencv-python>=4.5.4.60
    pillow
    pandas
    rawpy>=0.16.0
    docx>=0.2.4
    tqdm>=4.62.3
    XlsxWriter>=3.0.2